--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -272,6 +272,11 @@
           }
         }
       }
+      &:last-child{
+        a{
+          padding-right: 0;
+        }
+      }
 
       ul {
         &.submenu {
@@ -443,7 +448,8 @@
   justify-content: flex-end;
 
   @media only screen and (max-width: 1399px) {
-    display: none;
+    // display: none;
+    flex-grow: unset;
   }
   .header-single-btn{
     color: $black;
